 2011-03-07 14:30  hvlad 
   M src/jrd/why.cpp
   M src/remote/interface.cpp
   M src/remote/server.cpp
Fixed bug CORE-3328 : Client writes error messages into firebird.log when database is shutted down

 2011-03-04 17:59  dimitr 
   M src/jrd/vio.cpp
The simplest possible fix for CORE-3374: Server may crash or corrupt data if SELECT WITH LOCK is issued against records not in the latest format. Thanks to Vlad.

 2011-03-02 12:25  hvlad 
   M src/jrd/cmp.cpp
When system requests are released there is no more attachments in database.

 2011-02-28 16:03  hvlad 
   M src/jrd/cmp.cpp
System requests should run with valid attachment assigned

 2011-02-25 12:48  dimitr 
   M src/jrd/Optimizer.cpp
Fixed the regression I introduced recently. This is the simplest version of the fix.

 2011-02-25 09:42  dimitr 
   M src/jrd/cmp.cpp
Let's process the sub-node before using it in CMP_get_desc. It helps to avoid a crash if the sub-node is a variable (its e_var_variable argument is not assigned yet).

 2011-02-23 14:08  dimitr 
   M src/jrd/Database.cpp
   M src/jrd/Database.h
More conservative implementation. It should also fix CORE-3356.

 2011-02-22 14:30  hvlad 
   M src/jrd/err.cpp
Fixed bug CORE-3125 : AV in Worker::shutdown

 2011-02-22 12:25  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/opt.cpp
Better solution for CORE-3355, as suggested by Vlad.

 2011-02-22 10:12  dimitr 
   M src/jrd/cmp.cpp
   M src/jrd/exe.h
   M src/jrd/par.cpp
Misc.

 2011-02-22 10:11  dimitr 
   M src/jrd/dfw.epp
   M src/jrd/dyn_def.epp
   M src/jrd/vio.cpp
Reworked fix for CORE-3058. The new one is a poor man's solution which doesn't handle direct system table updates, but a more generic solution seems being an overkill for a point release.

 2011-02-21 20:56  dimitr 
   M src/jrd/Database.cpp
Correction.

 2011-02-21 11:12  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/btr_proto.h
   M src/jrd/opt.cpp
Cleanup.

 2011-02-21 11:05  dimitr 